--- a/views/index.jade
+++ b/views/index.jade
@@ -5,25 +5,15 @@ block content
         section.intro
             if message
                 h3.indexmes #{message}
-            //如果用户登录或者注册成功并且没有在登录状态下点击注册或者登录
-            if success&&user
-                h1.welcome #{success}，欢迎 #{user} 来到 Microblog
-            else if !success&&user
-                h1.welcome 欢迎 #{user} 来到 Microblog
-            else
-                h1.welcome 欢迎来到 Microblog
-            h3.tech Microblog是一个基于Node.js,使用express4.12.1,jade1.9.2以及MongoDB搭建起来的微博系统,是对Node.js开发指南一书中教学项目的重构。
+            h1.welcome 欢迎来到 KingdeeCert
+            h3.tech KingdeeCert是一个基于Hyperledger Fabric区块链网络的证书发布与查询系统。
             p.btnlist
-                if user
-                    a.login(href='/logout') 退出
-                    a.userlink(href='/users/#{user}') 发表文章
-                else
-                    a.login(href='/login') 登录
-                    a.register(href='/reg') 立即注册
+                a.login(href='/check') 查验证书
+                a.register(href='/add') 发布证书
                     
         section.show
-            each val in posts
+            each val in certs
                 article.col
-                    h3.author #{val.user}说
+                    h3.author #{val.certId}是
                     p
-                        | #{val.post}
+                        | #{val.certName}
