--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,13 +7,15 @@ html
       nav.header
           ul.list
               li.logo
-                  a(href='/') Microblog
+                  a(href='/') KingdeeCert
               li
                   a(href='/') 首页
               li
                   a(href='/add') 发证
               li
                   a(href='/check') 查证
+              li
+                  a(href='/show') 模板
        div.container
            block content
            hr
