--- a/views/show.jade
+++ b/views/show.jade
@@ -5,25 +5,25 @@ block content
         p.mess #{message}
         div.item
             label.label 证书编号
-            label.mess  #{certId}
+            label.label  #{certId}
         div.item
             label.label 发证日期
-            label.mess #{issueDate}
+            label.label #{issueDate}
         div.item
             label.label 证书名称
-            label.mess #{certName}
+            label.label #{certName}
         div.item
             label.label 证书内容
-            label.mess #{description}
+            label.label #{description}
         div.item
             label.label 有效期
-            label.mess #{valid}
+            label.label #{valid}
         div.item
             label.label 补充理由
-            label.mess #{reason}
+            label.label #{reason}
         div.item
             label.label 发证人
-            label.mess #{issuer}
+            label.label #{issuer}
         div.item
             label.label 收证人
-            label.mess #{owner}
+            label.label #{owner}
